# code-things

./: .gitignore  README.md  spin.toml
.github/workflows/: deploy.yml
api/post/: config.go  data.go  go.mod  go.sum  http.go  main.go  middleware.go  model.go  utils.go
api/profile/: Cargo.toml  spin.toml
api/profile/src/: auth.rs  config.rs  lib.rs  model.rs  utils.rs
modules/: spin_static_fs.wasm
scripts/: create-profile.json  update-profile.json  validate.sh
scripts/db/: 1_create_table_profiles.sql  up.sh
scripts/db/initdb.d/: 1_create_table_profiles.sql  2_create_table_posts.sql
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.config.json
web/src/: App.vue  main.ts
web/src/api/: index.ts
web/src/assets/: main.css
web/src/components/: Avatar.vue  CodePreview.vue  DropdownMenu.vue  UserProfileImage.vue
web/src/components/nav/: NavBar.vue  NavLink.vue  index.ts
web/src/router/: index.ts
web/src/utils/: index.ts
web/src/views/: HomeView.vue  ProfileView.vue
web/src/views/posts/: MyPostsView.vue  NewPostView.vue
