[package]
name = "profile-api"
authors = ["Justin Pflueger <justin.pflueger@fermyon.com>"]
description = "Profile REST API"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt-simple = "0.11.3"
base64 = "0.21.0"

[workspace]
